fixed carousel & croppped the image

--- a/style.css
+++ b/style.css
@@ -184,6 +184,8 @@ ul {
 
 .carousel-inner{
     display:block;
+    width:50%;
+    margin:auto;
 }
 
 .carousel-caption > h5  {
@@ -205,19 +207,10 @@ ul {
 
 .carousel-img{
     margin:auto;
-    width:50%;
-}
-
-.mb-3{
- margin:auto;
- width:50%;
+    width:1%;
 }
 
 .text-area{
 resize: both;
   overflow: auto;
-}
-
-#carouselExampleDark{
-    background-color: rgb(246, 190, 106);
 }
